manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amorphie-fact-user
  namespace: amorphie-fact-user
spec:
  selector: 
    app: amorphie-fact-user
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
